deploy/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ztre-system
  labels:
    app.kubernetes.io/part-of: ztre
---
apiVersion: v1
kind: Namespace
metadata:
  name: ztre-test
  labels:
    app.kubernetes.io/part-of: ztre
